# local-RAG

./: .gitattributes  .gitignore  README.md  TAKE_HOME_ASSIGNMENT.md  app.py  config.toml  pyproject.toml
demo_docs/: sample_questions.md
docs/: DESIGN_CHOICES.md  EDGE_AI_RAG_DESIGN_SPEC.md
rag_demo/: __init__.py  config.py
rag_demo/chat/: __init__.py  memory.py  prompt.py  query_rewrite.py  schemas.py  service.py  summarizer.py  token_budget.py
rag_demo/embeddings/: __init__.py  base.py  ollama_embedder.py
rag_demo/ingestion/: __init__.py  chunker.py  loader.py  pipeline.py
rag_demo/models/: __init__.py  base.py  ollama_client.py
rag_demo/retrieval/: __init__.py  fusion.py  retriever.py  store.py
rag_demo/storage/: __init__.py  conversation_store.py  manifest.py
rag_demo/ui/: __init__.py  chat_page.py  documents_page.py  sidebar.py
sample_docs/: edge_ai_notes.md  local_rag_notes.txt
slides/: edge-ai-rag-architecture.html
tests/: test_chat_service.py  test_chat_ui_metrics.py  test_chunker.py  test_config.py  test_conversation_memory.py  test_loader.py  test_manifest.py  test_ollama_client.py  test_prompt_builder.py  test_query_rewrite.py  test_retrieval_store.py  test_summarizer.py  test_token_budget.py
